--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #202142;
+    background-color: #ececec;
     color: #fff;
     line-height: 1.6;
 }
@@ -24,6 +24,15 @@ ul {
 }
 
 header {
+    height: 70px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+footer {
     height: 70px;
     width: 100%;
     display: flex;
@@ -87,7 +96,7 @@ header {
 
 .rating li:hover,
 .num-display {
-    background: #ff6a95;
+    background: #28caeb;
     color: #fff;
 }
 
@@ -119,7 +128,7 @@ input:focus {
 }
 
 .feedback-stats {
-    color: #fff;
+    color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -160,7 +169,7 @@ input:focus {
 }
 
 .btn-secondary {
-    background: #ff6a95;
+    background: #28caeb;
 }
 
 .btn:hover {
@@ -200,7 +209,7 @@ input:focus {
 }
 
 .about-link a:hover {
-    color: #ff6a95;
+    color: #28caeb;
 }
 
 .about h1 {
